# nami

./: .gitignore  CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  README.md  crate-hashes.json  flake.nix
examples/: aliases.lisp  extensions.lisp  scrapes.lisp  transforms.lisp
module/: default.nix
src/: bookmarks.rs  browser.rs  config.rs  content_blocking.rs  css.rs  dom.rs  fetch.rs  history.rs  input.rs  layout.rs  main.rs  mcp.rs  query_fetcher.rs  render.rs  scripting.rs  substrate.rs  tabs.rs  transform.rs  url_util.rs
