[package]
name = "aranami"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Nami (波) — GPU-rendered TUI browser: full web rendering in the terminal"
homepage = "https://github.com/pleme-io/nami"
repository = "https://github.com/pleme-io/nami"
readme = "README.md"
license = "MIT"
documentation = "https://docs.rs/aranami"
categories = ["command-line-utilities", "web-programming"]
keywords = ["browser", "tui", "gpu", "html", "css"]
publish = true

[[bin]]
name = "nami"
path = "src/main.rs"

[lints.clippy]
pedantic = "warn"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true

[dependencies]
# Pleme-io shared libraries
garasu = { git = "https://github.com/pleme-io/garasu" }
madori = { git = "https://github.com/pleme-io/madori" }
egaku = { git = "https://github.com/pleme-io/egaku" }
irodzuki = { git = "https://github.com/pleme-io/irodzuki" }
mojiban = { git = "https://github.com/pleme-io/mojiban" }
hasami = { git = "https://github.com/pleme-io/hasami" }
todoku = { git = "https://github.com/pleme-io/todoku" }
tsunagu = { git = "https://github.com/pleme-io/tsunagu" }
kaname = { git = "https://github.com/pleme-io/kaname" }
shikumi = { git = "https://github.com/pleme-io/shikumi" }
soushi = { git = "https://github.com/pleme-io/soushi" }
awase = { git = "https://github.com/pleme-io/awase" }
# Shared browser foundation + Lisp-authored DOM transforms (tatara).
nami-core = { git = "ssh://git@github.com/pleme-io/nami-core", branch = "main", features = ["eval"] }
schemars = "1"

# GPU rendering
wgpu = "25"
winit = "0.30"
pollster = "0.4"

# HTML/CSS parsing
html5ever = "0.29"
markup5ever = "0.14"
lightningcss = "1.0.0-alpha.71"

# Layout engine
taffy = "0.7"

# Networking
reqwest = { version = "0.12", features = ["json", "rustls-tls", "cookies", "gzip", "brotli"] }
url = "2"

# Image decoding (for inline images)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }

# CLI and config
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "macros"] }
dirs = "6.0"
thiserror = "2"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
